prevent swiper images from flickering while scaling

--- a/app/assets/stylesheets/blocks/b-news_wall-topic.sass
+++ b/app/assets/stylesheets/blocks/b-news_wall-topic.sass
@@ -38,11 +38,6 @@
       top: 0
       width: 100%
 
-      &.is-placeholder
-        background-image: asset_url('/assets/blocks/b-news_wall-topic/placeholder.svg')
-        background-size: contain
-        background-repeat: no-repeat
-
   .status-line
     display: flex
     margin-bottom: 7px
