--- a/app/assets/stylesheets/blocks/b-shiki_swiper.sass
+++ b/app/assets/stylesheets/blocks/b-shiki_swiper.sass
@@ -4,15 +4,18 @@
   line-height: 0
   width: 100%
 
-  // &.to-process
-    max-height: 160px
-
-    // img
-      max-height: 160px
+  &.to-process,
+  &.is-loading
+    &:before,
+    .b-image,
+    .b-video
       opacity: 0
 
+  &:before,
   .b-image,
   .b-video
+    transition: opacity 0.2s ease
+
     &.fixed .video-link img
       width: auto
 
@@ -22,6 +25,21 @@
 
     img
       max-width: none // need to make horizontal images to scale properly
+
+  &.is-placeholder
+    display: flex
+
+    .b-image,
+    .b-video
+      display: none
+
+    &:before
+      content: ''
+      background-image: asset_url('/assets/blocks/b-news_wall-topic/placeholder.svg')
+      background-size: contain
+      background-repeat: no-repeat
+      width: 100%
+      height: 100%
 
   // remove b-video shrinked negative bottom margin
   .b-video.shrinked .video-link img
